# cookiecutter_templates

./: README.md
py_basic/: README.md  cookiecutter.json
py_basic/{{cookiecutter.package_name}}/: pyproject.toml
py_basic/{{cookiecutter.package_name}}/src/scripts/: versioning.py
py_cli/: LICENSE  README.md  cookiecutter.json
py_cli/{{cookiecutter.package_name}}/: .gitignore  CHANGELOG.md  README.md  makefile  pyproject.toml
py_cli/{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/cli/: __init__.py
