[tool.poetry]

name = "{{cookiecutter.package_name}}"
version = "0.0.0"
description = "{{cookiecutter.project_description}}"
authors = [ "{{cookiecutter.author_name}} <{{cookiecutter.email}}>",]
readme = "README.md"
packages = [{include = "{{cookiecutter.package_name}}", from = "src"}]

[tool.poetry.dependencies]

python = "{{cookiecutter.compatible_python_versions}}"
typer = {extras = ["all"], version = "^0.9.0"}
dynaconf = "^3.2.3"

[tool.poetry.group.dev.dependencies]

pytest = "^7.3.1"
pytest-xdist = "^2.5.0"
pytest-cov = "^4.0.0"
pre-commit = "^2.17.0"
pdoc = "^7.1.1"
isort = "^5.10.1"
readme-coverage-badger = ">=0.1.2,<1.0.0"
pylint = "^2.17.3"
ruff = ">=0.0.263"
blue = ">=0.9.1"
pip-audit = "^2.5.4"


[tool.poetry.scripts]
{{cookiecutter.cli_name}} = "{{cookiecutter.package_name}}.cli:cli"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    '--verbose',
    '--durations=10',
    '--color=yes',
    '-s',
    '-vv',
    '--doctest-modules',
    '--cov=src/{{cookiecutter.package_name}}',
    '-n 2',
]
xfail_strict = true
filterwarnings = ["ignore", "ignore::DeprecationWarning"]
log_cli_level = "info"
testpaths = ["tests", "src/{{cookiecutter.package_name}}"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.blue]
line-length = 100


[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
select = [
    "A",
    "ARG",
    "B",
    "C",
    "C4",
    "E",
    "ERA",
    "F",
    "I",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RET",
    "S",
    "T10",
    "UP",
    "W",
]
ignore = ["A003"]
target-version = "py310"

[tool.ruff.per-file-ignores]

"__init__.py" = ["F401"]
"tests/**" = ["ARG", "S"]
